fix: center hero CTA buttons on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -65,6 +65,10 @@
         text-align: center;
     }
 
+    .hero__cta {
+        justify-content: center;
+    }
+
     .hero__subtitle {
         max-width: 100%;
     }
@@ -137,6 +141,7 @@
 
     .hero__cta {
         flex-direction: column;
+        align-items: center;
     }
 
     .btn--lg {
